# portiere

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  coverage.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  integration.yml  publish.yml  usagi-baseline.yml
benchmarks/athena_icd_snomed/: __init__.py  runner.py
docs/: fhir-bundle-export.md  fhir-profile-validation.md  mapping-review-ui.md  plausibility.md  reproducibility.md
docs/benchmarks/: athena-icd-snomed.md
docs/documentations/: 01-quickstart.md  02-unified-api-reference.md  03-configuration.md  04-operating-modes.md  05-knowledge-layer.md  06-llm-integration.md  07-data-models.md  08-pipeline-architecture.md  09-exceptions.md  10-portiere-cloud-guide.md  11-portiere-mapper-guide.md  12-deployment.md  13-migration-from-legacy.md  14-database-connections.md  15-vocabulary-setup.md  16-elasticsearch-backend.md  17-hybrid-mode.md  18-mapping-review-workflow.md  19-review-api-endpoints.md  20-multi-standard-support.md  21-cross-standard-mapping.md  22-build-knowledge-layer.md
docs/notebooks_examples/: 01.2_faiss_semantic_search.ipynb  01.3_hybrid_search_reranking.ipynb  01.4_llm_verified_mapping.ipynb  01_local_mode_quickstart.ipynb  03_byo_llm_providers.ipynb  04_knowledge_backends.ipynb  05_confidence_routing.ipynb  06_schema_mapping_deep_dive.ipynb  07_concept_mapping_deep_dive.ipynb  08_end_to_end_omop.ipynb  09_end_to_end_fhir.ipynb  10_elasticsearch_backend.ipynb  11_hybrid_mode.ipynb  12_mapping_review_workflow.ipynb  13_cross_standard_mapping.ipynb  14_multi_standard_overview.ipynb  15_custom_standards.ipynb  16_quickstart_walkthrough.ipynb  17_reproducibility_manifest.ipynb  18_hybrid_benchmark_walkthrough.ipynb  19_fhir_bundle_export.ipynb  20_mapping_review_walkthrough.ipynb  21_auto_replay.ipynb
docs/notebooks_examples/fhir_output/: Patient.parquet  condition_occurrence.csv  measurement.csv  person.csv  source_to_concept_map.csv  visit_occurrence.csv
docs/notebooks_examples/omop_output/: drug_exposure.csv  source_to_concept_map.csv
docs/notebooks_examples/output_hospital_cdm/: person.csv
docs/notebooks_examples/output_hybrid/: person.csv
docs/notebooks_examples/output_omop/: location.csv
docs/notebooks_examples/output_openehr/: demographics.person.csv
scripts/: build_benchmark_test_set.py  build_demo_data.py  build_fhir_profiles.py  build_us_core_profiles.py  download_usagi.sh
src/portiere/: __init__.py  auth.py  client.py  config.py  exceptions.py  project.py
src/portiere/_demo_data/: README.md  __init__.py  synthetic_conditions.csv  synthetic_medications.csv  synthetic_observations.csv  synthetic_patients.csv
src/portiere/artifacts/: __init__.py  artifact_manager.py  code_generator.py
src/portiere/benchmarks/: __init__.py
src/portiere/cli/: __init__.py  benchmark.py  export.py  models.py  quickstart.py  replay.py  review.py  validate.py
src/portiere/embedding/: __init__.py  gateway.py
src/portiere/engines/: __init__.py  base.py  pandas_engine.py  polars_engine.py  spark_engine.py
src/portiere/export/: __init__.py
src/portiere/knowledge/: __init__.py  athena.py  base.py  bm25s_backend.py  chroma_backend.py  elasticsearch_backend.py  factory.py  hybrid_backend.py  local_faiss_backend.py  milvus_backend.py  mongodb_backend.py  pgvector_backend.py  qdrant_backend.py  rrfusion.py  vocabulary_bridge.py
src/portiere/llm/: README.md  __init__.py  gateway.py
src/portiere/local/: __init__.py  concept_mapper.py  (+5 more)
tests/: __init__.py  conftest.py  test_artifacts.py  test_athena_loader.py  test_athena_loader_extra.py  test_auth.py  test_bedrock_embedding_provider.py  test_bedrock_provider.py  test_benchmark_runner.py  test_cli.py  test_client.py  test_cloud_stubs.py  test_concept_mapping_model.py  test_config.py  test_demo_data_invariant.py  test_embedding_config.py  test_embedding_gateway.py  test_etl_runner.py  test_fhir_export.py  test_fhir_profile_validator.py  test_fhir_systems.py  test_hashing.py  test_integration.py  test_knowledge_backends.py  test_knowledge_factory.py  test_knowledge_factory_extra.py  test_llm_gateway.py  test_local_concept_mapper.py  test_local_cross_mapper.py  test_local_llm_verifier.py  test_local_reranker.py  test_local_schema_mapper.py  test_local_stages.py  test_local_transforms.py  test_manifest.py  test_mcode_profile_validator.py  test_mcode_profiles_bundled.py  test_models.py  test_ollama_provider.py  test_pandas_engine.py  (+24 more)
(+115 files in other folders)
